fix: gap theme-toggle

--- a/client/src/ui/molecules/theme-toggle/index.scss
+++ b/client/src/ui/molecules/theme-toggle/index.scss
@@ -1,5 +1,5 @@
 .theme-toggle {
   display: flex;
   align-items: center;
-  gap: 0.2rem;
+  gap: 0.4rem;
 }
